<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    tools:context=".MainActivity">


    <ImageView
        android:layout_marginTop="60dp"
        android:layout_marginLeft="29dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/logoc"

        />

    <TextView
        android:id="@+id/HEADING"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="190dp"
        android:text="@string/HEADINNGNAME"
        android:textAllCaps="true"
        android:textColor="#0F0202"
        android:textSize="23sp"
        android:textStyle="bold"
        />


    <Button
        android:id="@+id/BUTTON2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="320dp"
        android:text="@string/Button2"
        android:textColor="#1B010D"
        android:textSize="40dp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/BUTTON1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="285dp"

        android:layout_marginTop="320dp"
        android:text="@string/Button1"
        android:textColor="#000E01"
        android:textSize="40dp"
        android:textStyle="bold"

        />

    <ImageView
        android:layout_width="185dp"
        android:layout_height="346dp"
        android:layout_marginLeft="149dp"
        android:layout_marginTop="460dp"
        android:scaleType="centerInside"
        android:src="@drawable/covid"

        />

</RelativeLayout>